# P3DKit

./: README.md
apps/: CMakeLists.txt
apps/faceApp/: CMakeLists.txt  main.cpp
apps/generalApp/: CMakeLists.txt  main.cpp
apps/headApp/: CMakeLists.txt  main.cpp
apps/testApp/: CMakeLists.txt  main.cpp
cmake/: AddPhyxs.cmake  AndroidConfig.cmake  CheckSys.cmake  CommonProjects.cmake  DesktopProjects.cmake  IOSConfig.cmake  LinuxConfig.cmake  MacosConfig.cmake  WindowsConfig.cmake  ios.toolchain.cmake
common/: CMakeLists.txt  IImageIO.h  Image.h  Image1.cpp  NdArray.cpp  NdArray.h  OneEuro.h  P3D_Utils.cpp  P3D_Utils.h  RenderCommon.cpp  RenderCommon.h  Template_Utils.h  data_store_interface.h  faceArithBase.cpp  faceArithBase.h  image_float_cpu.cpp  image_grey_cpu.cpp  image_impl_cpu.h  image_io.cpp  image_nv_cpu.cpp  imagerm_coord_utils.h  json.hpp  json_inc.h  lcom.cpp  lcom.h  mathIncludes.h  mathMatrix.hpp  mathVector.hpp  mem_data_store.cpp  mem_data_store.h  ndarray_io.cpp  quaternion.hpp  stream.cpp  stream.h
cv_common/: CMakeLists.txt  CvUtil.cpp  CvUtil.h
embreeScene/: CMakeLists.txt  KSEmbree_inc.h  embreeDevice.cpp  embreeDevice.h  embreeGeometry.cpp  embreeGeometry.h  embreeScene.cpp  embreeScene.h  embreeUtils.cpp  embreeUtils.h
engine/: CMakeLists.txt  Camera.cpp  Camera.h  LineGPU.cpp  LineGPU.h  MeshGpu.cpp  MeshGpu.h  P3DCore.h  P3DLight.hpp  P3DMaterial.hpp  P3dEngine.cpp  P3dEngine.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  ViewPort.h  Viewport.cpp  Window.cpp  Window.h  defaultRenderFrame.h  makeFactory.cpp  p3dVertexBuffer.h  renderFrame.cpp  renderFrame.h  renderTechnique.cpp  renderTechnique.h  renderable.h  shaderUniform.hpp  userGeoGpu.cpp  userGeoGpu.h
engine/OPenGL/: OGLCommon.cpp  OGLCommon.h  OGLDefaultRenderFrame.hpp  OGLFBO.cpp  OGLFBO.h  OGLRenderSetting.cpp  OGLShader.cpp  OGLShader.h  OGLTexture.cpp  OGLTexture.h  OGLUserMeshGpu.cpp  OGLUserMeshGpu.h  OGLVbo.cpp  OGLVbo.h  OGLVboLine.cpp_bak  OGLVboLine.h_bak  OGLVertexBuffer.cpp  OGLVertexBuffer.h  OGLWIidow.cpp  OGLWIidow.h  OGLWindowLinux.cpp  OGLWindowLinux.h
engine/Vul/: VulTexture.cpp  VulTexture.h  VulWindow.cpp  VulWindow.h  vulkanCommon.cpp  vulkanCommon.h
engine/loader/: CMakeLists.txt  P3DFbxLoader.cpp  P3DLoader.cpp  P3DLoader.h
engine/mgs/: renderNode3D.hpp  renderNodeBase.hpp  renderNodeBlur.hpp  renderNodeCustom.hpp  renderNodeImgFilter.hpp  renderNodeManager.cpp  renderNodeManager.hpp  renderNodeSky.hpp  sceneManager.cpp  sceneManager.hpp
engine/shaders/3D/: depth.frag  depth.vert  head.frag  head.vert  normal_depth.frag  normal_depth.vert  normal_depth_bone.frag  normal_depth_bone.vert
engine/shaders/blur/: gaussianblur.vert
engine/shaders/common/: bgfx_shader.sh  f_attri.frag  samplelib.sh  v_attri.vert  v_attri_bone.vert
engine/shaders/imgFilter/: color.frag  copy_fs.frag  copy_rect.frag  fs_normal_blur.frag  gaussianblur.frag  img_filter.vert  kaifx_chromatic_aberration_effect_fs.sc  kaifx_color_balance.sc  kaifx_copy_fs.sc  kaifx_depth_of_field_fs.sc  kaifx_lumi_fs.sc  kaifx_noise_effect_fs.sc  kaifx_screenrect_vs.sc  show_buffer.frag  simple_show.frag
engine/shaders/skysphere/: sky_sphere.frag  sky_sphere.vert
geo/: CMakeLists.txt  P3DBone.h  P3DSkeleton.h  P3DSkinMesh.h  comp.h  hairModel.cpp  hairModel.h  meshDataIO.h  meshIOData.cpp
physics/: CMakeLists.txt  PhyEngine.cpp  PhyEngine.h  PhyJointChain.cpp  PhyRigid.h  PhyScene.cpp  PhyScene.h  PhyStaticRigid.h  phyCommon.cpp  phyCommon.h  phyDynamicRigid.cpp  phyDynamicRigid.h  phyJointChain.h  phyStaticRigid.cpp
products/: CMakeLists.txt
products/LapDeform/: CMakeLists.txt  laplacian.cpp  laplacian.h
products/baseApp/: CMakeLists.txt  baseApp.cpp  baseApp.h  generalApp.cpp  generalApp.h  scene_pares.cpp  scene_pares.h
products/hairCloud/: ArcBall.h  CMakeLists.txt  HairConfig.cpp  HairConfig.h  HairSample.cpp  HairSample.h  HairScalp.cpp  HairScalp.h  HairSmoother.cpp  HairSmoother.h  HairStrand.cpp  HairStrand.h  HairStrands.cpp  HairStrands.h  HairWisp.cpp  HairWisp.h  HairWisps.cpp  HairWisps.h  HungarianAlgorithm.cpp  HungarianAlgorithm.h  StructDefs.cpp  StructDefs.h  TimeMeasurements.cpp  TimeMeasurements.h  XForm.h  main.h  vec.h
products/hairCloud/Math/: HairMath.cpp  HairMath.h  LinearAlgebra.hpp  MathUtils.hpp  Matrix3x3f.cpp  Matrix3x3f.h  Vector3f.cpp  Vector3f.h
python/: CMakeLists.txt  hairGLRender.cpp  hairGLRender.h  pyApp.hpp  pyFace3D.hpp  pyhelper.h  pyutils.h  toPyLib.cpp
render/: CMakeLists.txt  vrayRender.cpp  vrayRender.h  vrayRenderController.cpp  vrayRenderController.h  vrayUtils.h
renderTech/: CMakeLists.txt  PyRender.hpp  blendShapeRender.cpp  blendShapeRender.h  generalRenderTech.cpp  generalRenderTech.h  hairAttris.cpp  hairAttris.h  hairFilter.cpp  hairFilter.h  hairImage.cpp  hairImage.h  simpleRender.cpp  simpleRender.h
testCodes/: CMakeLists.txt  logOut.txt
testCodes/hah/: CMakeLists.txt
testCodes/resource/shaders/common/: f_attri.frag  v_attri.vert
testCodes/resource/shaders/hair/: hair.frag  hair_attri.vert  hair_mesh.frag  hair_mesh.vert
testCodes/resource/shaders/pbr/: equirect2cube_cs.glsl  irmap_cs.glsl  pbr_fs.frag  pbr_vs.vert  skybox_fs.frag  skybox_vs.vert  spbrdf_cs.glsl  spmap_cs.glsl  tonemap_fs.frag  tonemap_vs.vert
testCodes/resource/shaders/test/: quad_show.frag  quad_show.vert  show_HDR.frag  show_HDR.vert
testCodes/shTool/: CMakeLists.txt  main.cpp
testCodes/shaders/hair/: hair.frag  hair.vert
testCodes/testCuda/: CMakeLists.txt  hairCnn.cpp  hairCnn.h  main.cpp  simpleCuda.h  simplerCuda.cpp
testCodes/testEmbree/: CMakeLists.txt  main.cpp
testCodes/testGL/: CMakeLists.txt  main.cpp
testCodes/testLit/: CMakeLists.txt  main.cpp
testCodes/testNet/: CMakeLists.txt  main.cpp
testCodes/testPhy/: CMakeLists.txt  main.cpp
testCodes/testTool/: CMakeLists.txt  main.cpp
testCodes/testVray/: CMakeLists.txt  main.cpp
testCodes/testVulkan/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
tools/deformEyes/: CMakeLists.txt  deformEyes.cpp  deformEyes.h  hairFix.cpp  hairFix.h
(+17 files in other folders)
