project(embreeScene)
file(GLOB SOURCEFILES "*.h" "*.cpp")
#find_package(OpenCV REQUIRED)
#find_package(GLEW REQUIRED)
find_package(embree 3.6.1 REQUIRED)
#set(SOURCEFILES main.cpp cartoon.h cartoon.cpp)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${EMBREE_INCLUDE_DIRS} ..)
add_library(${PROJECT_NAME} STATIC ${SOURCEFILES})

set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER products)
target_link_libraries(${PROJECT_NAME}  common geo)
#target_link_libraries(${PROJECT_NAME} ${EMBREE_LIBRARY})
#set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "products")