if(WIN32)
add_subdirectory(testGL)
add_subdirectory(shTool)
add_subdirectory(testVray)
add_subdirectory(testTool)
add_subdirectory(testVulkan)
#add_subdirectory(testCuda)
add_subdirectory(testNet)
#add_subdirectory(testPhy)
add_subdirectory(testLit)
endif()
if(IS_MACOS)
    add_subdirectory(testNet)
endif()
